--- a/portfolio.html
+++ b/portfolio.html
@@ -9,29 +9,29 @@
     </head>
 	<body>
 		<header>
-			<a href="">WebStudio</a>
-			<nav>
-				<ul>
-					<li><a href="">Студія</a> </li>
-					<li><a href="">Портфоліо</a></li>
-					<li><a href="">Контакти</a></li>
+			<a href="./index.html" class="link-studio">WebStudio</a>
+			<nav class="nav-part">
+				<ul class="nav-list">
+					<li><a href="./index.html" class="nav-link">Студія</a> </li>
+					<li><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
+					<li><a href="" class="nav-link">Контакти</a></li>
 				</ul>
 			</nav>
 			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+				<li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
 		<!-- Main section-->
 		<main>
-			<section>
-				<h1>проекти - заховаємо</h1>
-				<ul>
-					<li><button type="button">Усі</button> </li>
-					<li><button type="button">Веб-сайти</button></li>
-					<li><button type="button">Додатки</button></li>
-					<li><button type="button">Дизайн</button></li>
-					<li><button type="button">Маркетинг</button></li>
+			<section class="main-site">
+				<h1 class="main-title">проекти - заховаємо</h1>
+				<ul class="main-list">
+					<li><button type="button" class="main-button">Усі</button> </li>
+					<li><button type="button" class="main-button">Веб-сайти</button></li>
+					<li><button type="button" class="main-button">Додатки</button></li>
+					<li><button type="button" class="main-button">Дизайн</button></li>
+					<li><button type="button" class="main-button">Маркетинг</button></li>
 				</ul>
 				<ul>
 					<li>
@@ -69,7 +69,7 @@
 			</section>
 		</main>
         <footer>
-			<a href="">WebStudio</a>
+			<a href="./index.html">WebStudio</a>
             <address>				
 				<ul>
                     <li><a href="https://goo.gl/maps/3nSZZ6kCtNBki5sE8" target="_blank" rel="noopener noreferrer nofollow ">м. Київ, пр-т Лесі Українки, 26</a></li>
