--- a/index.html
+++ b/index.html
@@ -5,30 +5,34 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Webstudio</title>
-		<link rel="stylesheet" href="./css/styles.css">
+		<link
+			href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+			rel="stylesheet"
+		/>
+		<link rel="stylesheet" href="./css/styles.css" />
 	</head>
 
-	<body >
+	<body>
 		<header>
-			<a href="">WebStudio</a>
-			<nav>
-				<ul>
-					<li><a href="">Студія</a> </li>
-					<li><a href="">Портфоліо</a></li>
-					<li><a href="">Контакти</a></li>
+			<a href="./index.html" class="link-studio">WebStudio</a>
+			<nav class="nav-part">
+				<ul class="nav-list">
+					<li><a href="./index.html" class="nav-link">Студія</a> </li>
+					<li><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
+					<li><a href="" class="nav-link">Контакти</a></li>
 				</ul>
 			</nav>
 			<ul>
-				<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+				<li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
 		<!-- Main section-->
 		<main>
 			<!--Герой section-->
-			<section>
-				<h1> Ефективні рішення для вашого бізнесу</h1>
-				<button type="button">Замовити послугу</button>
+			<section class="herou-section">
+				<h1 class="herou-title"> Ефективні рішення для вашого бізнесу</h1>
+				<button type="button" class="herou-button">Замовити послугу</button>
 			</section>
 			<!-- особливості section-->
 			<section>
@@ -85,10 +89,14 @@
 			</section>
 		</main>
 		<footer>
-			<a href="">WebStudio</a>
-            <address>				
+			<a href="./index.html">WebStudio</a>
+			<address>
 				<ul>
-                    <li><a href="https://goo.gl/maps/3nSZZ6kCtNBki5sE8" target="_blank" rel="noopener noreferrer nofollow ">м. Київ, пр-т Лесі Українки, 26</a></li>
+					<li
+						><a href="https://goo.gl/maps/3nSZZ6kCtNBki5sE8" target="_blank" rel="noopener noreferrer nofollow "
+							>м. Київ, пр-т Лесі Українки, 26</a
+						></li
+					>
 					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
 				</ul>
