--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 	<body>
 		<header>
-			<a href="./index.html" class="link-studio">WebStudio</a>
+			<a href="./index.html" class="logo">WebStudio</a>
 			<nav class="nav-part">
 				<ul class="nav-list">
 					<li><a href="./index.html" class="nav-link">Студія</a> </li>
