--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 
 	<body>
 		<header>
-			<a href="./index.html" class="logo">WebStudio</a>
-			<nav class="nav-part">
-				<ul class="nav-list">
-					<li><a href="./index.html" class="nav-link">Студія</a> </li>
-					<li><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
-					<li><a href="" class="nav-link">Контакти</a></li>
+			<a href="./index.html" class="logo"> <span class="logo-web">Web</span>Studio</a>
+			<nav >
+				<ul class="site-nav list">
+					<li><a href="./index.html" class="link">Студія</a> </li>
+					<li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+					<li><a href="" class="link">Контакти</a></li>
 				</ul>
 			</nav>
-			<ul>
+			<ul class="list">
 				<li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
 				<li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
 			</ul>
@@ -30,68 +30,72 @@
 		<!-- Main section-->
 		<main>
 			<!--Герой section-->
-			<section class="herou-section">
-				<h1 class="herou-title"> Ефективні рішення для вашого бізнесу</h1>
-				<button type="button" class="herou-button">Замовити послугу</button>
+			<section class="hero-section">
+				<h1 class="hero-title"> Ефективні рішення для вашого бізнесу</h1>
+				<button type="button" class="hero-button">Замовити послугу</button>
 			</section>
 			<!-- особливості section-->
-			<section>
-				<h2>сховаємо</h2>
-				<ul>
+			<section class="section">
+				<h2 class="section-title">сховаємо</h2>
+				<ul class="list">
 					<li>
-						<h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-						<p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+						<h3 class="section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
+						<p class="">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
 					</li>
 					<li>
-						<h3>ПУНКТУАЛЬНІСТЬ</h3>
-						<p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+						<h3 class="section-title">ПУНКТУАЛЬНІСТЬ</h3>
+						<p class="">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
 					</li>
 					<li>
-						<h3>ПЛАНУВАННЯ</h3>
-						<p>Так само консультація з широким активом значною мірою зумовлює.</p>
+						<h3 class="section-title">ПЛАНУВАННЯ</h3>
+						<p class="">Так само консультація з широким активом значною мірою зумовлює.</p>
 					</li>
 					<li>
-						<h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-						<p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+						<h3 class="section-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+						<p class="">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
 					</li>
 				</ul>
 			</section>
 			<!-- Портфоліо section-->
-			<section>
-				<h2>Чим ми займаємося</h2>
-				<ul>
+			<section class="section">
+				<h2 class="section-title">Чим ми займаємося</h2>
+				<ul class="list">
 					<li> <img src="./images/box1.jpg" alt="фото1" width="370" height="294" /></li>
 					<li><img src="./images/box2.jpg" alt="фото2" width="370" height="294" /></li>
 					<li><img src="./images/box3.jpg" alt="фото3" width="370" height="294" /></li>
 				</ul>
 			</section>
 			<!--  Наша команда section-->
-			<section>
-				<h2>Наша команда</h2>
-				<ul>
+			<section class="section">
+				<h2 class="section-title">Наша команда</h2>
+				<ul class="list">
 					<li>
-						<img src="./images/igor.jpg" alt="фото Ігор" width="270" height="260" /> <h3>Ігор Дем'яненко</h3>
+						<img src="./images/igor.jpg" alt="фото Ігор" width="270" height="260" />
+						 <h3 class="section-title">Ігор Дем'яненко</h3>
 						<p lang="en"> Product Designer</p>
 					</li>
 					<li>
-						<img src="./images/olga.jpg" alt="фото Ольга" width="270" height="260" /> <h3>Ольга Рєпіна</h3>
+						<img src="./images/olga.jpg" alt="фото Ольга" width="270" height="260" /> 
+						<h3 class="section-title">Ольга Рєпіна</h3>
 						<p lang="en"> Frontend Developer</p></li
 					>
 					<li>
-						<img src="./images/mykola.jpg" alt="фото Микола" width="270" height="260" /> <h3>Микола Тарасов</h3>
+						<img src="./images/mykola.jpg" alt="фото Микола" width="270" height="260" /> 
+						<h3 class="section-title">Микола Тарасов</h3>
 						<p lang="en">Marketing</p></li
 					>
 					<li>
-						<img src="./images/mykhaylo.jpg" alt="фото Михайло" width="270" height="260" /> <h3>Михайло Єрмаков</h3>
+						<img src="./images/mykhaylo.jpg" alt="фото Михайло" width="270" height="260" /> 
+						<h3 class="section-title">Михайло Єрмаков</h3>
 						<p lang="en">UI Designer</p></li
 					>
 				</ul>
 			</section>
 		</main>
 		<footer>
-			<a href="./index.html">WebStudio</a>
+			<a href="./index.html" class="logo"> <span class="logo-web">Web</span>Studio</a>
 			<address>
-				<ul>
+				<ul class="list">
 					<li
 						><a href="https://goo.gl/maps/3nSZZ6kCtNBki5sE8" target="_blank" rel="noopener noreferrer nofollow "
 							>м. Київ, пр-т Лесі Українки, 26</a
