--- a/portfolio.html
+++ b/portfolio.html
@@ -9,15 +9,15 @@
     </head>
 	<body>
 		<header>
-			<a href="./index.html" class="link-studio">WebStudio</a>
+			<a href="./index.html" class="logo"> <span class="logo-web">Web</span>Studio</a>
 			<nav class="nav-part">
-				<ul class="nav-list">
+				<ul class="nav-list list">
 					<li><a href="./index.html" class="nav-link">Студія</a> </li>
 					<li><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
 					<li><a href="" class="nav-link">Контакти</a></li>
 				</ul>
 			</nav>
-			<ul>
+			<ul class="list">
 				<li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
 				<li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
 			</ul>
@@ -26,14 +26,14 @@
 		<main>
 			<section class="main-site">
 				<h1 class="main-title">проекти - заховаємо</h1>
-				<ul class="main-list">
+				<ul class="main-list list">
 					<li><button type="button" class="main-button">Усі</button> </li>
 					<li><button type="button" class="main-button">Веб-сайти</button></li>
 					<li><button type="button" class="main-button">Додатки</button></li>
 					<li><button type="button" class="main-button">Дизайн</button></li>
 					<li><button type="button" class="main-button">Маркетинг</button></li>
 				</ul>
-				<ul>
+				<ul class="list">
 					<li>
 						<img src="./images/fotosyte.jpg" alt="вид сайту" width="370" />
 						<h2>Технокряк</h2>
@@ -69,9 +69,9 @@
 			</section>
 		</main>
         <footer>
-			<a href="./index.html">WebStudio</a>
+			<a href="./index.html" class="logo"> <span class="logo-web">Web</span>Studio</a>
             <address>				
-				<ul>
+				<ul class="list">
                     <li><a href="https://goo.gl/maps/3nSZZ6kCtNBki5sE8" target="_blank" rel="noopener noreferrer nofollow ">м. Київ, пр-т Лесі Українки, 26</a></li>
 					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
 					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
