--- a/index.html
+++ b/index.html
@@ -32,27 +32,27 @@
 			<!--Герой section-->
 			<section class="hero-section">
 				<h1 class="hero-title"> Ефективні рішення для вашого бізнесу</h1>
-				<button type="button" class="hero-button">Замовити послугу</button>
+				<button type="button" class=" button hero-button">Замовити послугу</button>
 			</section>
 			<!-- особливості section-->
 			<section class="section">
 				<h2 class="section-title">сховаємо</h2>
-				<ul class="list">
+				<ul class="features-list">
 					<li>
-						<h3 class="section-title">УВАГА ДО ДЕТАЛЕЙ</h3>
-						<p class="">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+						<h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
+						<p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
 					</li>
 					<li>
-						<h3 class="section-title">ПУНКТУАЛЬНІСТЬ</h3>
-						<p class="">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+						<h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
+						<p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
 					</li>
 					<li>
-						<h3 class="section-title">ПЛАНУВАННЯ</h3>
-						<p class="">Так само консультація з широким активом значною мірою зумовлює.</p>
+						<h3 class="title">ПЛАНУВАННЯ</h3>
+						<p>Так само консультація з широким активом значною мірою зумовлює.</p>
 					</li>
 					<li>
-						<h3 class="section-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-						<p class="">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+						<h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+						<p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
 					</li>
 				</ul>
 			</section>
@@ -68,25 +68,25 @@
 			<!--  Наша команда section-->
 			<section class="section">
 				<h2 class="section-title">Наша команда</h2>
-				<ul class="list">
+				<ul class="team-list">
 					<li>
 						<img src="./images/igor.jpg" alt="фото Ігор" width="270" height="260" />
-						 <h3 class="section-title">Ігор Дем'яненко</h3>
+						 <h3 class="team-title">Ігор Дем'яненко</h3>
 						<p lang="en"> Product Designer</p>
 					</li>
 					<li>
 						<img src="./images/olga.jpg" alt="фото Ольга" width="270" height="260" /> 
-						<h3 class="section-title">Ольга Рєпіна</h3>
+						<h3 class="team-title">Ольга Рєпіна</h3>
 						<p lang="en"> Frontend Developer</p></li
 					>
 					<li>
 						<img src="./images/mykola.jpg" alt="фото Микола" width="270" height="260" /> 
-						<h3 class="section-title">Микола Тарасов</h3>
+						<h3 class="team-title">Микола Тарасов</h3>
 						<p lang="en">Marketing</p></li
 					>
 					<li>
 						<img src="./images/mykhaylo.jpg" alt="фото Михайло" width="270" height="260" /> 
-						<h3 class="section-title">Михайло Єрмаков</h3>
+						<h3 class="team-title">Михайло Єрмаков</h3>
 						<p lang="en">UI Designer</p></li
 					>
 				</ul>
