--- a/portfolio.html
+++ b/portfolio.html
@@ -10,11 +10,11 @@
 	<body>
 		<header>
 			<a href="./index.html" class="logo"> <span class="logo-web">Web</span>Studio</a>
-			<nav class="nav-part">
-				<ul class="nav-list list">
-					<li><a href="./index.html" class="nav-link">Студія</a> </li>
-					<li><a href="./portfolio.html" class="nav-link">Портфоліо</a></li>
-					<li><a href="" class="nav-link">Контакти</a></li>
+			<nav >
+				<ul class="site-nav list">
+					<li><a href="./index.html" class="link">Студія</a> </li>
+					<li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+					<li><a href="" class="link">Контакти</a></li>
 				</ul>
 			</nav>
 			<ul class="list">
@@ -27,11 +27,11 @@
 			<section class="main-site">
 				<h1 class="main-title">проекти - заховаємо</h1>
 				<ul class="main-list list">
-					<li><button type="button" class="main-button">Усі</button> </li>
-					<li><button type="button" class="main-button">Веб-сайти</button></li>
-					<li><button type="button" class="main-button">Додатки</button></li>
-					<li><button type="button" class="main-button">Дизайн</button></li>
-					<li><button type="button" class="main-button">Маркетинг</button></li>
+					<li><button type="button" class="button main-button">Усі</button> </li>
+					<li><button type="button" class="button main-button">Веб-сайти</button></li>
+					<li><button type="button" class="button main-button">Додатки</button></li>
+					<li><button type="button" class="button main-button">Дизайн</button></li>
+					<li><button type="button" class="button main-button">Маркетинг</button></li>
 				</ul>
 				<ul class="list">
 					<li>
