--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			<a href="./index.html" class="logo"> <span class="logo-web">Web</span>Studio</a>
 			<nav >
 				<ul class="site-nav list">
-					<li><a href="./index.html" class="link">Студія</a> </li>
+					<li><a href="./index.html" class="link current">Студія</a> </li>
 					<li><a href="./portfolio.html" class="link">Портфоліо</a></li>
 					<li><a href="" class="link">Контакти</a></li>
 				</ul>
@@ -40,19 +40,19 @@
 				<ul class="features-list">
 					<li>
 						<h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
-						<p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+						<p class="text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
 					</li>
 					<li>
 						<h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
-						<p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+						<p class="text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
 					</li>
 					<li>
 						<h3 class="title">ПЛАНУВАННЯ</h3>
-						<p>Так само консультація з широким активом значною мірою зумовлює.</p>
+						<p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
 					</li>
 					<li>
 						<h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-						<p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+						<p class="text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
 					</li>
 				</ul>
 			</section>
@@ -66,25 +66,25 @@
 				</ul>
 			</section>
 			<!--  Наша команда section-->
-			<section class="section">
+			<section class="section-team">
 				<h2 class="section-title">Наша команда</h2>
 				<ul class="team-list">
-					<li>
+					<li class="team-list-color">
 						<img src="./images/igor.jpg" alt="фото Ігор" width="270" height="260" />
 						 <h3 class="team-title">Ігор Дем'яненко</h3>
 						<p lang="en"> Product Designer</p>
 					</li>
-					<li>
+					<li class="team-list-color">
 						<img src="./images/olga.jpg" alt="фото Ольга" width="270" height="260" /> 
 						<h3 class="team-title">Ольга Рєпіна</h3>
 						<p lang="en"> Frontend Developer</p></li
 					>
-					<li>
+					<li class="team-list-color">
 						<img src="./images/mykola.jpg" alt="фото Микола" width="270" height="260" /> 
 						<h3 class="team-title">Микола Тарасов</h3>
 						<p lang="en">Marketing</p></li
 					>
-					<li>
+					<li class="team-list-color">
 						<img src="./images/mykhaylo.jpg" alt="фото Михайло" width="270" height="260" /> 
 						<h3 class="team-title">Михайло Єрмаков</h3>
 						<p lang="en">UI Designer</p></li
@@ -92,8 +92,8 @@
 				</ul>
 			</section>
 		</main>
-		<footer>
-			<a href="./index.html" class="logo"> <span class="logo-web">Web</span>Studio</a>
+		<footer class="foter">
+			<a href="./index.html" class="logo"> <span class="logo-web">Web</span><span class="logo-studio">Studio</span></a>
 			<address>
 				<ul class="list">
 					<li
