--- a/portfolio.html
+++ b/portfolio.html
@@ -12,18 +12,18 @@
         <link rel="stylesheet" href="./css/styles.css">
     </head>
 	<body>
-		<header>
+		<header class="header-part">
 			<a href="./index.html" class="logo"> <span class="logo-web">Web</span>Studio</a>
-			<nav >
+			<nav>
 				<ul class="site-nav list">
-					<li><a href="./index.html" class="link">Студія</a> </li>
-					<li><a href="./portfolio.html" class="link current">Портфоліо</a></li>
+					<li><a href="./index.html" class="link current">Студія</a> </li>
+					<li><a href="./portfolio.html" class="link">Портфоліо</a></li>
 					<li><a href="" class="link">Контакти</a></li>
 				</ul>
 			</nav>
-			<ul class="list">
-				<li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-				<li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
+			<ul class="contakts list">
+				<li><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
+				<li><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
 			</ul>
 		</header>
 		<!-- Main section-->
@@ -40,45 +40,49 @@
 				<ul class="list">
 					<li>
 						<img src="./images/fotosyte.jpg" alt="вид сайту" width="370" />
-						<h2>Технокряк</h2>
-						<p>Веб-сайт</p>
+						<h2 class="title-works">Технокряк</h2>
+						<p class="text-works">Веб-сайт</p>
                     </li>
 					<li>
 						<img src="./images/poster.jpg" alt="2 баскетболісти" width="370"/>
-						<h2>Постер New Orlean vs Golden Star</h2>
-                        <p>Дизайн</p>
+						<h2 class="title-works">Постер New Orlean vs Golden Star</h2>
+                        <p class="text-works">Дизайн</p>
 					</li>
 					<li><img src="./images/restaurant.jpg" alt="Знак ресторану SeaFood" width="370"/>
-						<h2>Ресторан Seafood</h2>
-                        <p>Додаток</p></li>
+						<h2 class="title-works">Ресторан Seafood</h2>
+                        <p class="text-works">Додаток</p></li>
 					<li><img src="./images/project-prime.jpg" alt="Навушники" width="370"/>
-						<h2>Проєкт Prime</h2>
-                        <p>Маркетинг</p></li>
+						<h2 class="title-works">Проєкт Prime</h2>
+                        <p class="text-works">Маркетинг</p></li>
 					<li><img src="./images/project-boxes.jpg" alt="2 коробки" width="370"/>
-						<h2>Проєкт Boxes</h2>
-                        <p>Додаток</p></li>
+						<h2 class="title-works">Проєкт Boxes</h2>
+                        <p class="text-works">Додаток</p></li>
 					<li><img src="./images/monitor.jpg" alt="Монітор" width="370"/>
-						<h2>Inspiration has no Borders</h2>
-                        <p>Веб-сайт</p></li>
+						<h2 class="title-works">Inspiration has no Borders</h2>
+                        <p class="text-works">Веб-сайт</p></li>
 					<li><img src="./images/book.jpg" alt="Книжка" width="370"/>
-						<h2>Видання Limited Edition</h2>
-                        <p>Дизайн</p></li>
+						<h2 class="title-works">Видання Limited Edition</h2>
+                        <p class="text-works">Дизайн</p></li>
 					<li><img src="./images/project-lab.jpg" alt="Стікер з буквами" width="370"/>
-						<h2>Проєкт LAB</h2>
-                        <p>Маркетинг</p></li>
+						<h2 class="title-works">Проєкт LAB</h2>
+                        <p class="text-works">Маркетинг</p></li>
 					<li><img src="./images/growing-business.jpg" alt="Хтось працює на ноутбукі" width="370"/>
-						<h2>Growing Business</h2>
-                        <p>Додаток</p></li>
+						<h2 class="title-works">Growing Business</h2>
+                        <p class="text-works">Додаток</p></li>
 				</ul>
 			</section>
 		</main>
-        <footer>
-			<a href="./index.html" class="logo"> <span class="logo-web">Web</span>Studio</a>
-            <address>				
+        <footer class="foter">
+			<a href="./index.html" class="logo-studio"> <span class="logo-web">Web</span>Studio</a>
+			<address >
 				<ul class="list">
-                    <li><a href="https://goo.gl/maps/3nSZZ6kCtNBki5sE8" target="_blank" rel="noopener noreferrer nofollow ">м. Київ, пр-т Лесі Українки, 26</a></li>
-					<li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-					<li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+					<li
+						><a class="link-address" href="https://goo.gl/maps/3nSZZ6kCtNBki5sE8" target="_blank" rel="noopener noreferrer nofollow "
+							>м. Київ, пр-т Лесі Українки, 26</a
+						></li
+					>
+					<li><a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+					<li><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
 				</ul>
 			</address>
 		</footer>
