--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 			</section>
 			<!-- особливості section-->
 			<section class="section">
-				<h2 class="section-title">сховаємо</h2>
+				<h2 class="section-title"> Features-сховаємо</h2>
 				<ul class="features list">
 					<li>
 						<h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
